Don't destroy MainWindow on delete-event, just hide it

This stops MainWindow being unreferenced, and prevents crashes caused by
things which then try to use it.

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=659118